# consolechange

./: .gitattributes  .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.py  upload.py
.github/: CONTRIBUTING.md
consolechange/: __init__.py  _consolechange.c  _consolechange.c.h
tests/: test_consolechange.py
